--- a/Board/src/main/resources/application.properties
+++ b/Board/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/board?serverTimezo
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234mysql!
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM DUAL
+
+#MyBatis
+mybatis.configuration.map-underscore-to-camel-case=true
